--- a/application_v1/css/styles_front.css
+++ b/application_v1/css/styles_front.css
@@ -7,6 +7,27 @@ header {
   color: white;
 }
 
+.card-img-top {
+  width: 100%;
+  height: 12vw;
+  object-fit: cover;
+}
+
 .form-control-height{
-    height: 5rem !important; 
+  height: 5rem !important; 
+}
+
+.cut-title, .cut-text {
+  display: -webkit-box !important; 
+  -webkit-box-orient: vertical !important; 
+  overflow: hidden !important; 
+  text-overflow: ellipsis !important;
+}
+
+.cut-title { 
+  -webkit-line-clamp: 2 !important;
+}
+
+.cut-text { 
+  -webkit-line-clamp: 3 !important; 
 }
