Se añadio un indicador de carga al realizar la petición de añadir un feed a la BD.

--- a/application_v1/css/styles_front.css
+++ b/application_v1/css/styles_front.css
@@ -31,3 +31,11 @@ header {
 .cut-text { 
   -webkit-line-clamp: 3 !important; 
 }
+
+.spinner-border {
+  display: none;
+}
+
+.spinner-grow {
+  display: none;
+}
