Se realizaron varios cambios: Se actualizo el proceso para obtener categorias. Se modifico la forma de obtener imagenes para las noticias y se validaron las entradas a la BD para filtrar noticias incompletas. Se modifico y optimizo la forma de mostras las noticias y las categorias. Se realizaron varias correcciones para errores presentes en diferentes funciones.

--- a/application_v1/css/styles_front.css
+++ b/application_v1/css/styles_front.css
@@ -26,6 +26,7 @@ header {
 
 .cut-title { 
   -webkit-line-clamp: 2 !important;
+  color: black;
 }
 
 .cut-text { 
@@ -38,4 +39,21 @@ header {
 
 .spinner-grow {
   display: none;
+}
+
+a:link {
+  text-decoration: none;
+}
+
+a:visited {
+  text-decoration: none;
+}
+
+a:hover {
+  color: inherit;
+  text-decoration: underline;
+}
+
+a:active {
+  text-decoration: underline;
 }
