--- a/application_v2/Versión_original/css/styles_front.css
+++ b/application_v2/Versión_original/css/styles_front.css
@@ -2,7 +2,7 @@ header {
 	display: table;
 	width: 100%;
 	background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
-		url("../assets/Img/header_bg.jpg");
+		url("../assets/Img/header_bg.webp");
 	background-size: cover;
 	height: 350px;
 	color: white;
